--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,11 +6,5 @@
 
 // подключения компонентов страницы
 @import "./components/header";
-
-// тестовые стили, удалите их
-.page__body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: var(--vh);
-}
+@import "./components/hero";
+@import "./components/podcasts";
