Weblayout Broadcasts added

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -33,27 +33,27 @@
             <li class="nav-bottom__item"><a href="#" class="nav-bottom__link">Опросы</a></li>
             <li class="nav-bottom__item"><a href="#" class="nav-bottom__link">Рейтинги</a></li>
             <li class="nav-bottom__item"><a href="#" class="nav-bottom__link">Реклама</a></li>
-            <li class="nav-bottom__item broadcast-group">
-              <div class="broadcast">
-                <button class="btn-reset broadcast__button" data-graph-path="">
-                  <svg class="broadcast__play" aria-label="Играть ранее в эфире">
+            <li class="nav-bottom__item on-air-group">
+              <div class="on-air">
+                <button class="btn-reset on-air__button" data-graph-path="">
+                  <svg class="on-air__play" aria-label="Играть ранее в эфире">
                     <use xlink:href="./img/sprite.svg#play_header_btn" />
                   </svg>
                 </button>
-                <div class="broadcast__info">
-                  <span class="broadcast__desc">Ранее в эфире</span>
-                  <span class="broadcast__name">«Музыка»</span>
+                <div class="on-air__info">
+                  <span class="on-air__desc">Ранее в эфире</span>
+                  <span class="on-air__name">«Музыка»</span>
                 </div>
               </div>
-              <div class="broadcast">
-                <button class="btn-reset broadcast__button" data-graph-path="">
-                  <svg class="broadcast__play" aria-label="Играть сейчас в эфире">
+              <div class="on-air">
+                <button class="btn-reset on-air__button" data-graph-path="">
+                  <svg class="on-air__play" aria-label="Играть сейчас в эфире">
                     <use xlink:href="./img/sprite.svg#play_header_btn" />
                   </svg>
                 </button>
-                <div class="broadcast__info">
-                  <span class="broadcast__desc">Сейчас в эфире</span>
-                  <span class="broadcast__name">«Как так?»</span>
+                <div class="on-air__info">
+                  <span class="on-air__desc">Сейчас в эфире</span>
+                  <span class="on-air__name">«Как так?»</span>
                 </div>
               </div>
             </li>
