--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -94,12 +94,12 @@
   }
 }
 
-.broadcast-group {
+.on-air-group {
   display: flex;
   border-right: 1px solid $color-light_color;
 }
 
-.broadcast {
+.on-air {
   max-width: 175px;
   width: 100%;
   height: 40px;
