--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -11,3 +11,9 @@
 
 // стили для свайпера
 // @import "../../node_modules/swiper/swiper-bundle.min";
+
+// стили для выпадающего меню choices.js
+// @import "../../node_modules/choices.js/public/assets/styles/base.min";
+@import "../../node_modules/choices.js/public/assets/styles/choices.min";
+// SCSS test
+// @import "../../node_modules/choices.js/src/styles/choices";
