--- a/src/partials/podcasts.html
+++ b/src/partials/podcasts.html
@@ -4,14 +4,14 @@
     <ul class="list-reset podcasts__list">
       <li class="podcasts__item">
         <figure class="podcasts__img">
-          <img src="./img/podcasts/1.png" srcset="./img/podcasts/1_2x.png 2x" loading="lazy" alt="Европа. XIX век">
+          <img src="./img/podcasts/1.png" srcset="./img/podcasts/1@2x.png 2x" loading="lazy" alt="Европа. XIX век">
           <figcaption class="podcasts__created">14 июня</figcaption>
         </figure>
         <div class="podcasts__info">
           <div class="podcasts__desc">
             <div class="podcasts__text">
               <span class="podcasts__time">15:43</span>
-              <span class="podcasts__name">Европа. XIX век</span>
+              <h3 class="podcasts__name">Европа. XIX век</h3>
               <span class="podcasts__author">Дмитрий Гутенберг</span>
             </div>
             <button class="btn-reset podcasts__button" data-graph-path="" aria-label="Играть Европа. XIX век">
@@ -29,14 +29,14 @@
       </li>
       <li class="podcasts__item">
         <figure class="podcasts__img">
-          <img src="./img/podcasts/2.png" srcset="./img/podcasts/2_2x.png 2x" loading="lazy" alt="О музыке">
+          <img src="./img/podcasts/2.png" srcset="./img/podcasts/2@2x.png 2x" loading="lazy" alt="О музыке">
           <figcaption class="podcasts__created">11 июня</figcaption>
         </figure>
         <div class="podcasts__info">
           <div class="podcasts__desc">
             <div class="podcasts__text">
               <span class="podcasts__time">5:32</span>
-              <span class="podcasts__name">О музыке</span>
+              <h3 class="podcasts__name">О музыке</h3>
               <span class="podcasts__author">Дмитрий Гутенберг</span>
             </div>
             <button class="btn-reset podcasts__button" data-graph-path="" aria-label="Играть О музыке">
@@ -54,14 +54,14 @@
       </li>
       <li class="podcasts__item">
         <figure class="podcasts__img">
-          <img src="./img/podcasts/3.png" srcset="./img/podcasts/3_2x.png 2x" loading="lazy" alt="Люди сегодня">
+          <img src="./img/podcasts/3.png" srcset="./img/podcasts/3@2x.png 2x" loading="lazy" alt="Люди сегодня">
           <figcaption class="podcasts__created">8 июня</figcaption>
         </figure>
         <div class="podcasts__info">
           <div class="podcasts__desc">
             <div class="podcasts__text">
               <span class="podcasts__time">8:54</span>
-              <span class="podcasts__name">Люди сегодня</span>
+              <h3 class="podcasts__name">Люди сегодня</h3>
               <span class="podcasts__author">Анна Васильева</span>
             </div>
             <button class="btn-reset podcasts__button" data-graph-path="" aria-label="Играть Люди сегодня">
@@ -79,14 +79,14 @@
       </li>
       <li class="podcasts__item">
         <figure class="podcasts__img">
-          <img src="./img/podcasts/4.png" srcset="./img/podcasts/4_2x.png 2x" loading="lazy" alt="Хэллоу, Африка!">
+          <img src="./img/podcasts/4.png" srcset="./img/podcasts/4@2x.png 2x" loading="lazy" alt="Хэллоу, Африка!">
           <figcaption class="podcasts__created">5 июня</figcaption>
         </figure>
         <div class="podcasts__info">
           <div class="podcasts__desc">
             <div class="podcasts__text">
               <span class="podcasts__time">9:04</span>
-              <span class="podcasts__name">Хэллоу, Африка!</span>
+              <h3 class="podcasts__name">Хэллоу, Африка!</h3>
               <span class="podcasts__author">Пётр Дмитриевский</span>
             </div>
             <button class="btn-reset podcasts__button" data-graph-path="" aria-label="Играть Хэллоу, Африка!">
@@ -104,14 +104,14 @@
       </li>
       <li class="podcasts__item">
         <figure class="podcasts__img">
-          <img src="./img/podcasts/5.png" srcset="./img/podcasts/5_2x.png 2x" loading="lazy" alt="Обо всём">
+          <img src="./img/podcasts/5.png" srcset="./img/podcasts/5@2x.png 2x" loading="lazy" alt="Обо всём">
           <figcaption class="podcasts__created">2 июня</figcaption>
         </figure>
         <div class="podcasts__info">
           <div class="podcasts__desc">
             <div class="podcasts__text">
               <span class="podcasts__time">7:03</span>
-              <span class="podcasts__name">Обо всём</span>
+              <h3 class="podcasts__name">Обо всём</h3>
               <span class="podcasts__author">Пётр Дмитриевский</span>
             </div>
             <button class="btn-reset podcasts__button" data-graph-path="" aria-label="Играть Обо всём">
@@ -129,14 +129,14 @@
       </li>
       <li class="podcasts__item">
         <figure class="podcasts__img">
-          <img src="./img/podcasts/6.png" srcset="./img/podcasts/6_2x.png 2x" loading="lazy" alt="Физика цвета">
+          <img src="./img/podcasts/6.png" srcset="./img/podcasts/6@2x.png 2x" loading="lazy" alt="Физика цвета">
           <figcaption class="podcasts__created">28 мая</figcaption>
         </figure>
         <div class="podcasts__info">
           <div class="podcasts__desc">
             <div class="podcasts__text">
               <span class="podcasts__time">9:15</span>
-              <span class="podcasts__name">Физика цвета</span>
+              <h3 class="podcasts__name">Физика цвета</h3>
               <span class="podcasts__author">Татьяна Флеганова</span>
             </div>
             <button class="btn-reset podcasts__button" data-graph-path="" aria-label="Играть Физика цвета">
@@ -154,14 +154,14 @@
       </li>
       <li class="podcasts__item">
         <figure class="podcasts__img">
-          <img src="./img/podcasts/7.png" srcset="./img/podcasts/7_2x.png 2x" loading="lazy" alt="Источник звука">
+          <img src="./img/podcasts/7.png" srcset="./img/podcasts/7@2x.png 2x" loading="lazy" alt="Источник звука">
           <figcaption class="podcasts__created">22 мая</figcaption>
         </figure>
         <div class="podcasts__info">
           <div class="podcasts__desc">
             <div class="podcasts__text">
               <span class="podcasts__time">16:04</span>
-              <span class="podcasts__name">Источник звука</span>
+              <h3 class="podcasts__name">Источник звука</h3>
               <span class="podcasts__author">Пётр Дмитриевский</span>
             </div>
             <button class="btn-reset podcasts__button" data-graph-path="" aria-label="Играть Источник звука">
@@ -179,14 +179,14 @@
       </li>
       <li class="podcasts__item">
         <figure class="podcasts__img">
-          <img src="./img/podcasts/8.png" srcset="./img/podcasts/8_2x.png 2x" loading="lazy" alt="Правила этикета">
+          <img src="./img/podcasts/8.png" srcset="./img/podcasts/8@2x.png 2x" loading="lazy" alt="Правила этикета">
           <figcaption class="podcasts__created">18 мая</figcaption>
         </figure>
         <div class="podcasts__info">
           <div class="podcasts__desc">
             <div class="podcasts__text">
               <span class="podcasts__time">6:55</span>
-              <span class="podcasts__name">Правила этикета</span>
+              <h3 class="podcasts__name">Правила этикета</h3>
               <span class="podcasts__author">Татьяна Флеганова</span>
             </div>
             <button class="btn-reset podcasts__button" data-graph-path="" aria-label="Играть Правила этикета">
